<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/actionMain"
        android:icon="@drawable/ic_cloud_download_black_24dp"
        android:title="@string/fetch" />

    <item
        android:id="@+id/actionPurchase"
        android:icon="@drawable/ic_track_black"
        android:title="@string/track" />
    <item
        android:id="@+id/actionSettings"
        android:icon="@drawable/ic_cloud_upload_black_24dp"
        android:title="@string/manual_flush" />

    <item
        android:id="@+id/actionAnonymize"
        android:icon="@drawable/ic_anonymous"
        android:title="@string/anonymize"/>

    <item
        android:id="@+id/actionInAppContentBlock"
        android:icon="@drawable/ic_content_blocks"
        android:title="@string/content_blocks_title"/>
</menu>